SQuirreL SQL Client Change Log
==============================

Not yet released - available from CVS or in the latest snapshot:
----------------------------------------------------------------

Enhancements:

Updated Chinese translation (Thanks to xpdz)

Hibernate Plugin:
  The Classpath configuration now allows to move entries up or down. 

New plugin for Netezza NPS database server.  This plugin allows for viewing source and details of Views, 
Stored Procedures, and synonyms.  It also provides the ability to execute stored procedures in the SQL Editor.
See Help for screenshots and more details.

Aliases now have the ability to setup a keep-alive SQL statement and sleep time (in seconds) to prevent a 
connection from being disconnected while appearing to be idle.  This is done using the new Connection tab 
on the Alias properties dialog.

Derby Plugin:
 New tab to display the source code of Derby stored procedures 
 Thanks to Glenn (bassnfool2) for the patch (Patch ID 2907220)


XML Export:
 Tables in SQuirreL's GUI now allow to export data as XML (besides CSV and MS-Excel export)
 Thanks to mironsadziak for the patch (Patch ID 2905595) 

New editor component: RSyntaxTextArea by fifesoft.com.
 New features:
  - No long line problems
  - Enhanced search functions:
      shift F3: Find selected.
      F3: Repeat last find.
      control shift F3: Mark selected.
      escape: Unmark all.
  - Line numbers can be displayed
  - Current line can be highlighted
  Note: On MS-Windows systems the Java-VM parameter -Dsun.java2d.noddraw=true must be set in your SQUirreL start batch to prevent performance problems. 


 - New Polish translation available (Thanks to Miron Sadziak)

Better table header rendering for MAC OS
  Thanks for Brian Mauter's Patch (ID 2856103)

Feature request 2826175:
  Number of rows read is now visible on message panel and results tab.

Feature request 1656320: